[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/monsteroftime/mushroomenemymesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/monsteroftime/mushroomenemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/monsteroftime/mushbody.tres" type="Material" id=3]
[ext_resource path="res://scenes/monsteroftime/mushface1.tres" type="Material" id=4]
[ext_resource path="res://asset/sounds/monster4.wav" type="AudioStream" id=5]

[sub_resource type="ArrayMesh" id=4]
resource_local_to_scene = true
resource_name = "mushroomenemy_Mesh4 Group4 Model"
surfaces/0 = {
"aabb": AABB( -8.34529, -12.0436, -64.1203, 16.397, 5.61158, 28.9973 ),
"array_data": PoolByteArray( 195, 211, 0, 65, 208, 138, 4, 193, 163, 18, 97, 194, 40, 186, 176, 40, 0, 64, 6, 64, 0, 224, 180, 63, 118, 195, 48, 64, 28, 211, 205, 192, 244, 125, 12, 194, 40, 186, 176, 40, 0, 32, 23, 64, 0, 0, 0, 64, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 40, 186, 176, 40, 0, 32, 33, 64, 0, 96, 198, 63, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 0, 162, 129, 63, 0, 32, 33, 64, 0, 96, 198, 63, 118, 195, 48, 64, 28, 211, 205, 192, 244, 125, 12, 194, 0, 162, 129, 63, 0, 32, 23, 64, 0, 0, 0, 64, 229, 179, 104, 192, 28, 211, 205, 192, 244, 125, 12, 194, 0, 162, 129, 63, 0, 128, 43, 64, 0, 0, 0, 64, 79, 134, 5, 193, 150, 231, 4, 193, 140, 27, 98, 194, 214, 187, 178, 87, 0, 160, 58, 64, 0, 0, 180, 63, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 214, 187, 178, 87, 0, 32, 33, 64, 0, 96, 198, 63, 229, 179, 104, 192, 28, 211, 205, 192, 244, 125, 12, 194, 214, 187, 178, 87, 0, 128, 43, 64, 0, 0, 0, 64, 66, 149, 44, 192, 130, 139, 15, 193, 152, 61, 128, 194, 212, 159, 163, 80, 0, 128, 40, 64, 0, 0, 153, 63, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 212, 159, 163, 80, 0, 32, 33, 64, 0, 96, 198, 63, 79, 134, 5, 193, 150, 231, 4, 193, 140, 27, 98, 194, 212, 159, 163, 80, 0, 160, 58, 64, 0, 0, 180, 63, 182, 190, 38, 64, 130, 139, 15, 193, 152, 61, 128, 194, 24, 129, 129, 63, 0, 160, 23, 64, 0, 0, 153, 63, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 24, 129, 129, 63, 0, 32, 33, 64, 0, 96, 198, 63, 66, 149, 44, 192, 130, 139, 15, 193, 152, 61, 128, 194, 24, 129, 129, 63, 0, 128, 40, 64, 0, 0, 153, 63, 182, 190, 38, 64, 130, 139, 15, 193, 152, 61, 128, 194, 42, 159, 163, 46, 0, 160, 23, 64, 0, 0, 153, 63, 195, 211, 0, 65, 208, 138, 4, 193, 163, 18, 97, 194, 42, 159, 163, 46, 0, 64, 6, 64, 0, 224, 180, 63, 108, 119, 199, 190, 150, 178, 64, 193, 247, 100, 77, 194, 42, 159, 163, 46, 0, 32, 33, 64, 0, 96, 198, 63 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 6, 0, 8, 0, 7, 0, 9, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 17, 0, 16, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 18,
"material": ExtResource( 4 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 18
}
surfaces/1 = {
"aabb": AABB( -20.032, -9.37156, -72.0303, 40.064, 16.2726, 41.5713 ),
"array_data": PoolByteArray( 137, 65, 32, 65, 145, 213, 220, 64, 152, 61, 128, 194, 48, 60, 212, 184, 0, 64, 20, 66, 0, 32, 136, 66, 118, 195, 48, 64, 231, 251, 135, 64, 244, 125, 12, 194, 48, 60, 212, 184, 0, 32, 25, 66, 0, 32, 137, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 48, 60, 212, 184, 0, 96, 19, 66, 0, 224, 136, 66, 137, 65, 32, 65, 145, 213, 220, 64, 152, 61, 128, 194, 0, 116, 206, 196, 0, 64, 20, 66, 0, 32, 136, 66, 229, 179, 104, 192, 231, 251, 135, 64, 244, 125, 12, 194, 0, 116, 206, 196, 0, 192, 25, 66, 0, 160, 136, 66, 118, 195, 48, 64, 231, 251, 135, 64, 244, 125, 12, 194, 0, 116, 206, 196, 0, 32, 25, 66, 0, 32, 137, 66, 137, 65, 32, 193, 145, 213, 220, 64, 152, 61, 128, 194, 0, 116, 206, 196, 0, 96, 22, 66, 0, 192, 134, 66, 137, 65, 32, 65, 145, 213, 220, 64, 152, 61, 128, 194, 64, 127, 226, 168, 0, 64, 20, 66, 0, 32, 136, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 64, 127, 226, 168, 0, 96, 20, 66, 0, 0, 135, 66, 137, 65, 32, 193, 145, 213, 220, 64, 152, 61, 128, 194, 64, 127, 226, 168, 0, 96, 22, 66, 0, 192, 134, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 94, 100, 240, 154, 0, 96, 19, 66, 0, 224, 136, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 94, 100, 240, 154, 0, 96, 20, 66, 0, 0, 135, 66, 137, 65, 32, 65, 145, 213, 220, 64, 152, 61, 128, 194, 94, 100, 240, 154, 0, 64, 20, 66, 0, 32, 136, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 94, 156, 231, 26, 0, 96, 19, 66, 0, 224, 136, 66, 137, 65, 32, 65, 233, 241, 21, 193, 152, 61, 128, 194, 94, 156, 231, 26, 0, 160, 20, 66, 0, 64, 136, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 94, 156, 231, 26, 0, 96, 20, 66, 0, 0, 135, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 49, 196, 210, 53, 0, 96, 19, 66, 0, 224, 136, 66, 118, 195, 48, 64, 232, 159, 218, 192, 244, 125, 12, 194, 49, 196, 210, 53, 0, 64, 25, 66, 0, 32, 137, 66, 137, 65, 32, 65, 233, 241, 21, 193, 152, 61, 128, 194, 49, 196, 210, 53, 0, 160, 20, 66, 0, 64, 136, 66, 118, 195, 48, 64, 232, 159, 218, 192, 244, 125, 12, 194, 61, 221, 213, 49, 0, 64, 25, 66, 0, 32, 137, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 61, 221, 213, 49, 0, 96, 19, 66, 0, 224, 136, 66, 156, 191, 190, 64, 2, 72, 165, 191, 244, 125, 12, 194, 61, 221, 213, 49, 0, 224, 24, 66, 0, 96, 137, 66, 156, 191, 190, 64, 2, 72, 165, 191, 244, 125, 12, 194, 61, 35, 214, 182, 0, 224, 24, 66, 0, 96, 137, 66, 137, 65, 160, 65, 172, 28, 158, 191, 152, 61, 128, 194, 61, 35, 214, 182, 0, 96, 19, 66, 0, 224, 136, 66, 118, 195, 48, 64, 231, 251, 135, 64, 244, 125, 12, 194, 61, 35, 214, 182, 0, 32, 25, 66, 0, 32, 137, 66, 156, 191, 190, 64, 2, 72, 165, 191, 244, 125, 12, 194, 43, 24, 220, 215, 0, 224, 24, 66, 0, 96, 137, 66, 118, 195, 48, 64, 231, 251, 135, 64, 244, 125, 12, 194, 43, 24, 220, 215, 0, 32, 25, 66, 0, 32, 137, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 43, 24, 220, 215, 0, 32, 26, 66, 0, 32, 137, 66, 118, 195, 48, 64, 231, 251, 135, 64, 244, 125, 12, 194, 0, 58, 222, 218, 0, 32, 25, 66, 0, 32, 137, 66, 229, 179, 104, 192, 231, 251, 135, 64, 244, 125, 12, 194, 0, 58, 222, 218, 0, 192, 25, 66, 0, 160, 136, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 0, 58, 222, 218, 0, 32, 26, 66, 0, 32, 137, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 213, 24, 235, 236, 0, 32, 26, 66, 0, 32, 137, 66, 229, 179, 104, 192, 231, 251, 135, 64, 244, 125, 12, 194, 213, 24, 235, 236, 0, 192, 25, 66, 0, 160, 136, 66, 212, 183, 218, 192, 2, 72, 165, 191, 244, 125, 12, 194, 213, 24, 235, 236, 0, 32, 26, 66, 0, 96, 136, 66, 212, 183, 218, 192, 2, 72, 165, 191, 244, 125, 12, 194, 194, 36, 229, 228, 0, 32, 26, 66, 0, 96, 136, 66, 229, 179, 104, 192, 231, 251, 135, 64, 244, 125, 12, 194, 194, 36, 229, 228, 0, 192, 25, 66, 0, 160, 136, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 194, 36, 229, 228, 0, 128, 23, 66, 0, 0, 134, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 207, 60, 219, 215, 0, 128, 23, 66, 0, 0, 134, 66, 229, 179, 104, 192, 231, 251, 135, 64, 244, 125, 12, 194, 207, 60, 219, 215, 0, 192, 25, 66, 0, 160, 136, 66, 137, 65, 32, 193, 145, 213, 220, 64, 152, 61, 128, 194, 207, 60, 219, 215, 0, 96, 22, 66, 0, 192, 134, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 162, 100, 233, 161, 0, 96, 20, 66, 0, 0, 135, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 162, 100, 233, 161, 0, 128, 23, 66, 0, 0, 134, 66, 137, 65, 32, 193, 145, 213, 220, 64, 152, 61, 128, 194, 162, 100, 233, 161, 0, 96, 22, 66, 0, 192, 134, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 162, 156, 223, 36, 0, 96, 20, 66, 0, 0, 135, 66, 137, 65, 32, 193, 233, 241, 21, 193, 152, 61, 128, 194, 162, 156, 223, 36, 0, 160, 22, 66, 0, 192, 134, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 162, 156, 223, 36, 0, 128, 23, 66, 0, 0, 134, 66, 137, 65, 32, 65, 233, 241, 21, 193, 152, 61, 128, 194, 64, 129, 220, 40, 0, 160, 20, 66, 0, 64, 136, 66, 137, 65, 32, 193, 233, 241, 21, 193, 152, 61, 128, 194, 64, 129, 220, 40, 0, 160, 22, 66, 0, 192, 134, 66, 34, 0, 116, 42, 172, 28, 158, 191, 131, 15, 144, 194, 64, 129, 220, 40, 0, 96, 20, 66, 0, 0, 135, 66, 118, 195, 48, 64, 232, 159, 218, 192, 244, 125, 12, 194, 0, 140, 206, 66, 0, 64, 25, 66, 0, 32, 137, 66, 137, 65, 32, 193, 233, 241, 21, 193, 152, 61, 128, 194, 0, 140, 206, 66, 0, 160, 22, 66, 0, 192, 134, 66, 137, 65, 32, 65, 233, 241, 21, 193, 152, 61, 128, 194, 0, 140, 206, 66, 0, 160, 20, 66, 0, 64, 136, 66, 229, 179, 104, 192, 232, 159, 218, 192, 244, 125, 12, 194, 0, 140, 206, 66, 0, 0, 26, 66, 0, 192, 136, 66, 118, 195, 48, 64, 232, 159, 218, 192, 244, 125, 12, 194, 0, 198, 229, 90, 0, 64, 25, 66, 0, 32, 137, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 0, 198, 229, 90, 0, 32, 26, 66, 0, 32, 137, 66, 229, 179, 104, 192, 232, 159, 218, 192, 244, 125, 12, 194, 0, 198, 229, 90, 0, 0, 26, 66, 0, 192, 136, 66, 156, 191, 190, 64, 2, 72, 165, 191, 244, 125, 12, 194, 43, 232, 231, 92, 0, 224, 24, 66, 0, 96, 137, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 43, 232, 231, 92, 0, 32, 26, 66, 0, 32, 137, 66, 118, 195, 48, 64, 232, 159, 218, 192, 244, 125, 12, 194, 43, 232, 231, 92, 0, 64, 25, 66, 0, 32, 137, 66, 156, 193, 223, 190, 2, 72, 165, 191, 8, 172, 243, 193, 213, 232, 244, 107, 0, 32, 26, 66, 0, 32, 137, 66, 212, 183, 218, 192, 2, 72, 165, 191, 244, 125, 12, 194, 213, 232, 244, 107, 0, 32, 26, 66, 0, 96, 136, 66, 229, 179, 104, 192, 232, 159, 218, 192, 244, 125, 12, 194, 213, 232, 244, 107, 0, 0, 26, 66, 0, 192, 136, 66, 229, 179, 104, 192, 232, 159, 218, 192, 244, 125, 12, 194, 194, 220, 235, 97, 0, 0, 26, 66, 0, 192, 136, 66, 212, 183, 218, 192, 2, 72, 165, 191, 244, 125, 12, 194, 194, 220, 235, 97, 0, 32, 26, 66, 0, 96, 136, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 194, 220, 235, 97, 0, 128, 23, 66, 0, 0, 134, 66, 137, 65, 32, 193, 233, 241, 21, 193, 152, 61, 128, 194, 207, 195, 223, 84, 0, 160, 22, 66, 0, 192, 134, 66, 229, 179, 104, 192, 232, 159, 218, 192, 244, 125, 12, 194, 207, 195, 223, 84, 0, 0, 26, 66, 0, 192, 136, 66, 137, 65, 160, 193, 172, 28, 158, 191, 152, 61, 128, 194, 207, 195, 223, 84, 0, 128, 23, 66, 0, 0, 134, 66 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 4, 0, 6, 0, 3, 0, 7, 0, 9, 0, 8, 0, 10, 0, 12, 0, 11, 0, 13, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 19, 0, 21, 0, 20, 0, 22, 0, 24, 0, 23, 0, 25, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 31, 0, 33, 0, 32, 0, 34, 0, 36, 0, 35, 0, 37, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 43, 0, 45, 0, 44, 0, 46, 0, 48, 0, 47, 0, 49, 0, 51, 0, 50, 0, 50, 0, 52, 0, 49, 0, 53, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 59, 0, 61, 0, 60, 0, 62, 0, 64, 0, 63, 0, 65, 0, 67, 0, 66, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 72,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 68
}

[sub_resource type="CapsuleShape" id=3]
radius = 0.718788
height = 2.53557

[sub_resource type="SphereShape" id=2]
radius = 12.4634

[sub_resource type="SphereShape" id=5]
radius = 6.0

[node name="mushroomenemy" type="KinematicBody"]
collision_layer = 5
collision_mask = 5
collision/safe_margin = 0.01
script = ExtResource( 2 )

[node name="mesh" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )

[node name="top" parent="mesh/Armature/Bone/Bone001" index="1"]
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.836, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Posbullet" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35306, -1.32951 )

[node name="targetpos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81072, 0 )

[node name="attackdelay" type="Timer" parent="."]
one_shot = true

[node name="close" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="close"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="attackdelay" to="." method="_on_attackdelay_timeout"]
[connection signal="body_entered" from="close" to="." method="_on_close_body_entered"]
[connection signal="body_exited" from="close" to="." method="_on_close_body_exited"]

[editable path="mesh"]
